--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,9 @@
 @import "./components/button";
 @import "./base/li";
 @import "./base/container"; 
+
 @import "./components/header";
+@import "./components/burger";
 @import "./components/hero";
 @import "./components/advantage";
 @import "./components/activity";
@@ -25,3 +27,4 @@
 @import "./components/agreement";
 @import "./base/animation";
 @import "./components/footer";
+@import "./components/burger";
