--- a/css/main.css
+++ b/css/main.css
@@ -459,15 +459,36 @@ button {
 }
 
 .section_container {
-  width: 1200px;
+  padding: 0px 15px;
   margin-right: auto;
   margin-left: auto;
-  padding: 0px 15px;
+  width: 1200px;
+}
+@media screen and (min-width: 480px) {
+  .section_container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .section_container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section_container {
+    width: 1200px;
+  }
 }
 
 .section_wrapper {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .section_wrapper {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .section_wrapper--modification {
   padding-top: 0px;
@@ -490,7 +511,6 @@ button {
 
 .header_container {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
@@ -524,9 +544,19 @@ button {
 .header_nav {
   margin-left: 93px;
 }
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .header_nav {
+    display: none;
+  }
+}
 
 .header_menu {
-  display: flex;
+  display: none;
+}
+@media (min-width: 768px) {
+  .header_menu {
+    display: flex;
+  }
 }
 
 .header_item {
@@ -569,6 +599,147 @@ button {
   fill: currentColor;
 }
 
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+}
+.menu-toggle.js-open-menu .icon__menu {
+  display: block;
+}
+.menu-toggle .icon__menu {
+  display: none;
+}
+.menu-toggle.js-open-menu .icon__cross {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+.menu-toggle:hover,
+.menu-toggle:focus {
+  background-color: var(--accent-color);
+}
+
+.menu-container {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: var(--main-color);
+  z-index: 999;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: var(--title-text-color);
+}
+
+.mobile-menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.mobile-menu__position {
+  margin-top: auto;
+}
+.mobile-menu .link-mobile {
+  display: block;
+  padding: 10px;
+  color: var(--title-text-color);
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-menu .link-mobile.link-mobile__focus {
+  color: var(--accent-color);
+}
+.mobile-menu .link-mobile:focus, .mobile-menu .link-mobile:hover {
+  color: var(--accent-color);
+}
+.mobile-menu .mobile-contact {
+  display: block;
+  padding: 10px;
+}
+
+.mobile-phone {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.1764705882;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--accent-color);
+}
+
+.mobile-mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--primary-text-color);
+}
+
+.mobile-socials {
+  padding: 10px;
+  list-style: none;
+  display: flex;
+  margin-top: 40px;
+  position: relative;
+}
+
+.mobile-sites__line::after {
+  content: "";
+  display: block;
+  width: 1px;
+  height: 22px;
+  border-radius: 3px;
+  background-color: var(--accent-color);
+  position: absolute;
+  bottom: 10px;
+  left: 105px;
+}
+
+.mobile-sites:not(:last-child) {
+  margin-right: 20px;
+}
+
+.mobile-sites > a {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
 .hero {
   max-width: 1600px;
   height: 600px;
@@ -609,21 +780,56 @@ button {
   display: flex;
   gap: 30px;
 }
+@media screen and (max-width: 479px) {
+  .advantage {
+    width: 100%;
+    flex-direction: column;
+  }
+}
+@media screen and (min-width: 480px) {
+  .advantage {
+    width: 100%;
+    flex-wrap: wrap;
+  }
+}
 
 .advantage_item {
-  width: 270px;
+  width: 450px;
+  gap: 30px;
+}
+@media screen and (min-width: 768px) {
+  .advantage_item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1170px) {
+  .advantage_item {
+    width: 270px;
+  }
 }
 
 .advantage-wrapper__icon {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 270px;
-  height: 120px;
+  width: 450px;
+  height: 226px;
   background-color: var(--secondary-bg-color);
   margin-bottom: 30px;
   gap: 30px;
   border-radius: 4px;
+}
+@media screen and (min-width: 768px) {
+  .advantage-wrapper__icon {
+    width: 354px;
+    height: 120px;
+  }
+}
+@media screen and (min-width: 1170px) {
+  .advantage-wrapper__icon {
+    width: 270px;
+    height: auto;
+  }
 }
 
 .advantage_text {
@@ -639,6 +845,11 @@ button {
   text-transform: uppercase;
   margin-top: 0;
   margin-bottom: 10px;
+}
+@media screen and (max-width: 767px) {
+  .advantages_title {
+    text-align: center;
+  }
 }
 
 .activity_title {
@@ -1200,4 +1411,145 @@ button {
 }
 .footer_input:focus {
   border-color: rgba(255, 255, 255, 0.6);
+}
+
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+}
+.menu-toggle.js-open-menu .icon__menu {
+  display: block;
+}
+.menu-toggle .icon__menu {
+  display: none;
+}
+.menu-toggle.js-open-menu .icon__cross {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+.menu-toggle:hover,
+.menu-toggle:focus {
+  background-color: var(--accent-color);
+}
+
+.menu-container {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: var(--main-color);
+  z-index: 999;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: var(--title-text-color);
+}
+
+.mobile-menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.mobile-menu__position {
+  margin-top: auto;
+}
+.mobile-menu .link-mobile {
+  display: block;
+  padding: 10px;
+  color: var(--title-text-color);
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-menu .link-mobile.link-mobile__focus {
+  color: var(--accent-color);
+}
+.mobile-menu .link-mobile:focus, .mobile-menu .link-mobile:hover {
+  color: var(--accent-color);
+}
+.mobile-menu .mobile-contact {
+  display: block;
+  padding: 10px;
+}
+
+.mobile-phone {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.1764705882;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--accent-color);
+}
+
+.mobile-mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--primary-text-color);
+}
+
+.mobile-socials {
+  padding: 10px;
+  list-style: none;
+  display: flex;
+  margin-top: 40px;
+  position: relative;
+}
+
+.mobile-sites__line::after {
+  content: "";
+  display: block;
+  width: 1px;
+  height: 22px;
+  border-radius: 3px;
+  background-color: var(--accent-color);
+  position: absolute;
+  bottom: 10px;
+  left: 105px;
+}
+
+.mobile-sites:not(:last-child) {
+  margin-right: 20px;
+}
+
+.mobile-sites > a {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
 }/*# sourceMappingURL=main.css.map */
