--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,27 +1,51 @@
 .clients {
-    @include flex;
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
+    display: flex;
+    justify-content: center;
     gap: 30px;
+
+    @media screen and (max-width: 479px) {
+    width: 100%;
+    flex-direction: column;
+    
+    }
+
+        @media screen and (min-width: 480px) {
+            width: 100%;
+            flex-wrap: wrap;
+        }
 }
 
 .clients_title {
     margin-top: 0;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 1.15;
+
+    @media screen and (min-width: 1200px) {
+        font-size: 36px;
+        margin-bottom: 50px;
+    }
 }
 
 .clients_link {
     @include flex;
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
+
     color: #AFB1B8;
-    width: 170px;
+    width: 210px;
     height: 92px;
     border: 1px solid currentColor;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-radius: 4px;
+
+    @media screen and (max-width: 768px) {
+            width: 226px;
+        }
+    
+        @media screen and (min-width: 1200px) {
+            width: 170px;
+        }
+
 
     &:hover {
     color: var(--accent-color);
