--- a/css/main.css
+++ b/css/main.css
@@ -359,6 +359,14 @@ img {
   display: inline-block;
   margin-top: 0px;
   margin-bottom: 20px;
+  font-size: 24px;
+  line-height: 1.1666666667;
+}
+@media screen and (min-width: 1200) {
+  .footer_logo {
+    font-size: 26px;
+    line-height: 1.1923076923;
+  }
 }
 
 button {
@@ -1356,18 +1364,45 @@ button {
 
 .footer_container {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  .footer_container {
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer_container {
+    align-items: baseline;
+  }
 }
 
 .footer--transform {
-  margin-right: 70px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .footer--transform {
+    margin-bottom: 60px;
+    text-align: center;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer--transform {
+    margin-right: 70px;
+    margin-bottom: 0;
+  }
 }
 
 .footer_address {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
   font-style: normal;
+}
+@media screen and (min-width: 1200px) {
+  .footer_address {
+    gap: 20px;
+  }
 }
 
 .footer > .link {
@@ -1400,8 +1435,23 @@ button {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer_subscribe:nth-last-child(2) {
-  margin-right: auto;
+.footer_subscribe {
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .footer_subscribe {
+    margin-bottom: 60px;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer_subscribe:nth-last-child(2) {
+    margin-right: auto;
+  }
 }
 
 .footer_title {
@@ -1440,9 +1490,20 @@ button {
 
 .footer_wrapper {
   display: flex;
-  justify-content: center;
   align-items: center;
-  gap: 12px;
+  gap: 20px;
+}
+@media screen and (min-width: 480px) {
+  .footer_wrapper {
+    flex-direction: column;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer_wrapper {
+    justify-content: center;
+    flex-direction: row;
+    gap: 12px;
+  }
 }
 
 .footer_label {
