--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -20,4 +20,10 @@
     display: inline-block;
     margin-top: 0px;
     margin-bottom: 20px;
+    font-size: 24px;
+    line-height: calc(28/24);
+    @media screen and (min-width: 1200) {
+        font-size: 26px;
+        line-height: calc(31/26);
+    }
 }
