--- a/sass/components/_burger.scss
+++ b/sass/components/_burger.scss
@@ -15,15 +15,18 @@
 
     
     & .icon__menu{
-        display: none;
+        display: block;
     } 
     
     &.js-open-menu .icon__cross {
         display: none;
     }
+    &.js-close-menu .icon__menu {
+        display: none;
+    }
 }
 
-    @media (min-width: 768px) {
+    @media screen and(min-width: 768px) {
     .menu-toggle {
         display: none;
     }
@@ -33,6 +36,10 @@
 .menu-toggle:focus {
     background-color: var(--accent-color);
 }
+
+// .menu-icon{
+//     fill: currentColor;
+// }
 
 .menu-container {
     position: fixed;
@@ -128,7 +135,7 @@
     position: relative;
 }
 
-.mobile-sites__line::after {
+.mobile-sites__line > a::after {
      content: '';
      display: block;
      width: 1px;
