--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -45,11 +45,18 @@
 .section-item {
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
     gap: 8px;
 
     @media screen and (min-width:768px) {
         justify-content: center;
+        margin-bottom: 50px;
     }
 }
 
+.section-list:nth-child(3){
+    @media screen and (min-width: 480px) and (max-width: 767px){
+        padding-right: 20px;
+        padding-bottom: 10px;
+    }
+}
