--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -105,7 +105,7 @@
 
 .header_item--flex {
     @include flex;
-
+    line-height: 1.2;
 
     &:nth-child(1){
         @media screen and (max-width: 1199px) {
