--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -6,7 +6,15 @@
 }
 
 .portfolio_border {
-    width: 370px;
+    width: 450px;
+
+    @media screen and (min-width: 768px) {
+            width: 354px;
+        }
+
+    @media screen and (min-width: 1200px) {
+        width: 370px;
+    }
 }
 
 .portfolio-img {
