--- a/css/main.css
+++ b/css/main.css
@@ -783,7 +783,7 @@ button {
   margin-left: auto;
   margin-right: auto;
   background-color: var(--footer-bg-color);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../img/mobile/Header\ img\ 480.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/mobile/Header/img/480.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -793,27 +793,27 @@ button {
 }
 @media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero .hero {
-    background-image: url(../../img/mobile/Header\ img@2x\ 480.jpg);
+    background-image: url(../img/mobile/Header/img@2x/480.jpg);
   }
 }
 @media screen and (min-width: 480px) {
   .hero {
-    background-image: url(../../img/tab/Header\ M\ img\ 768.jpg);
+    background-image: url(../img/tab/Header/M/img/768.jpg);
   }
 }
 @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
   .hero .hero {
-    background-image: url(../../img/tab/Header\ M\ img@2x\ 768.jpg);
+    background-image: url(../img/tab/Header/M/img@2x/768.jpg);
   }
 }
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: url(../../img/laptop/header\ Img\ 1200.jpg);
+    background-image: url(../img/laptop/header/Img/1200.jpg);
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero .hero {
-    background-image: url(../../img/laptop/header\ Img@2x\ 1200.jpg);
+    background-image: url(../img/laptop/header/Img@2x/1200.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
