--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -8,7 +8,7 @@
         linear-gradient(to right,
             rgba(47, 48, 58, .4),
             rgba(47, 48, 58, .4)), 
-            url(../../img/mobile/Header\ img\ 480.jpg);
+            url(../img/mobile/Header/img/480.jpg);
 
     background-position: center;
     background-size: cover;
@@ -19,31 +19,31 @@
         screen and (min-resolution: 192dpi),
         screen and (min-resolution: 2dppx) {
             .hero {
-                background-image: url(../../img/mobile/Header\ img@2x\ 480.jpg);
+                background-image: url(../img/mobile/Header/img@2x/480.jpg);
             }
         }
 
         @media screen and (min-width:480px){
-            background-image: url(../../img/tab/Header\ M\ img\ 768.jpg);
+            background-image: url(../img/tab/Header/M/img/768.jpg);
             
             @media screen and (min-device-pixel-ratio: 2),
                 screen and (min-resolution: 192dpi),
                 screen and (min-resolution: 2dppx) {
                     .hero {
-                        background-image: url(../../img/tab/Header\ M\ img@2x\ 768.jpg);
+                        background-image: url(../img/tab/Header/M/img@2x/768.jpg);
                     }
                 }
         }
 
 
                 @media screen and (min-width:768px) {
-                    background-image: url(../../img/laptop/header\ Img\ 1200.jpg);
+                    background-image: url(../img/laptop/header/Img/1200.jpg);
         
                     @media screen and (min-device-pixel-ratio: 2),
                     screen and (min-resolution: 192dpi),
                     screen and (min-resolution: 2dppx) {
                         .hero {
-                            background-image: url(../../img/laptop/header\ Img@2x\ 1200.jpg);
+                            background-image: url(../img/laptop/header/Img@2x/1200.jpg);
                         }
                     }
                 }
