corrected mobile menu

--- a/css/main.css
+++ b/css/main.css
@@ -696,6 +696,10 @@ button {
   color: var(--title-text-color);
 }
 
+.mobile-item {
+  display: inline-block;
+}
+
 .mobile-menu {
   padding: 0;
   margin: 0;
@@ -1702,6 +1706,10 @@ button {
   top: 16px;
   right: 16px;
   color: var(--title-text-color);
+}
+
+.mobile-item {
+  display: inline-block;
 }
 
 .mobile-menu {
