--- a/sass/components/_burger.scss
+++ b/sass/components/_burger.scss
@@ -68,6 +68,9 @@
     right: 16px;
     color: var(--title-text-color);
 }
+.mobile-item{
+    display: inline-block;
+}
 
 .mobile-menu {
     padding: 0;
