--- a/css/main.css
+++ b/css/main.css
@@ -1012,7 +1012,7 @@ button {
   background-color: var(--main-color);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  width: 450px;
+  width: 100%;
   gap: 30px;
 }
 @media screen and (min-width: 768px) {
