--- a/sass/components/_user.scss
+++ b/sass/components/_user.scss
@@ -2,8 +2,8 @@
     background-color: var(--main-color);
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-
-    width: 450px;
+    // flex-basis: calc((100%-gap*колонки-1)/колонки);
+    width: 100%;
     gap: 30px;
         
     @media screen and (min-width: 768px) {
